--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
       ],
       "svdFile": "${workspaceFolder}/STM32F769.svd",
       "interface": "swd",
+      "armToolchainPath": "${env:ARM_GCC_COMPILER_DIR}/bin",
     }
   ]
 }
