--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "type": "shell",
       "label": "Make",
-      "command": "cmake -H${workspaceFolder}/ -Bbuild/ && cmake --build build/ -- -j8",
+      "command": "cmake -H${workspaceFolder}/ -Bbuild/ -DCMAKE_BUILD_TYPE=Release && cmake --build build/ -- -j8",
       "problemMatcher": ["$gcc"],
       "group": {
         "kind": "build",
@@ -16,7 +16,7 @@
     {
       "type": "shell",
       "label": "Make Clean",
-      "command": "cmake -H${workspaceFolder}/ -Bbuild/ && cmake --build build/ --clean-first -- -j8",
+      "command": "cmake -H${workspaceFolder}/ -Bbuild/ -DCMAKE_BUILD_TYPE=Release && cmake --build build/ --clean-first -- -j8",
       "problemMatcher": ["$gcc"],
       "group": {
         "kind": "build",
